<?xml version="1.0" encoding="UTF-8"?>
<!-- JBoss, Home of Professional Open Source Copyright 2008, Red Hat Middleware 
	LLC, and others contributors as indicated by the @authors tag. All rights 
	reserved. See the copyright.txt in the distribution for a full listing of 
	individual contributors. This copyrighted material is made available to anyone 
	wishing to use, modify, copy, or redistribute it subject to the terms and 
	conditions of the GNU Lesser General Public License, v. 2.1. This program 
	is distributed in the hope that it will be useful, but WITHOUT A WARRANTY; 
	without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
	PURPOSE. See the GNU Lesser General Public License for more details. You 
	should have received a copy of the GNU Lesser General Public License, v.2.1 
	along with this distribution; if not, write to the Free Software Foundation, 
	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>org.jboss.narayana</groupId>
        <artifactId>narayana-all</artifactId>
        <version>5.0.0.M2-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>jbosstxbridge</artifactId>
    <name>${project.artifactId}</name>
    <description>${project.artifactId}</description>
    <packaging>jar</packaging>
    <properties>
        <version.jbossas>7.1.1.Final</version.jbossas>
        <version.jbossts>4.16.4.Final-SNAPSHOT</version.jbossts>
        <version.junit>4.8.2</version.junit>
        <version.byteman>2.0.1</version.byteman>
        <version.apache.httpcomponents>4.1.2</version.apache.httpcomponents>
        <byteman.home>${project.build.directory}/byteman</byteman.home>
        <general.server.jvm.args>
            -Xms64m -Xmx512m -XX:MaxPermSize=256m
        </general.server.jvm.args>
        <ipv4.server.jvm.args></ipv4.server.jvm.args>
        <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
        <byteman.server.jvm.args>
            -Dorg.jboss.byteman.debug=true -Dorg.jboss.byteman.verbose=true -Dorg.jboss.byteman.contrib.dtest.rmiregistry.port=1199
            -Djboss.modules.system.pkgs=org.jboss.byteman
            -javaagent:${byteman.home}/byteman.jar=port:9091,listener:true,sys:${byteman.home}/byteman-dtest.jar
        </byteman.server.jvm.args>
        <jpda.server.jvm.args/>
    </properties>
    <build>
        <plugins>
            <plugin>
                <inherited>false</inherited>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>false</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>byteman.copy</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.jboss.byteman</groupId>
                                    <artifactId>byteman</artifactId>
                                    <version>${version.byteman}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>org.jboss.byteman</groupId>
                                    <artifactId>byteman-dtest</artifactId>
                                    <version>${version.byteman}</version>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${byteman.home}</outputDirectory>
                            <stripVersion>true</stripVersion>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
        	<plugins>
        		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        		<plugin>
        			<groupId>org.eclipse.m2e</groupId>
        			<artifactId>lifecycle-mapping</artifactId>
        			<version>1.0.0</version>
        			<configuration>
        				<lifecycleMappingMetadata>
        					<pluginExecutions>
        						<pluginExecution>
        							<pluginExecutionFilter>
        								<groupId>
        									org.apache.maven.plugins
        								</groupId>
        								<artifactId>
        									maven-dependency-plugin
        								</artifactId>
        								<versionRange>
        									[2.1,)
        								</versionRange>
        								<goals>
        									<goal>copy</goal>
        								</goals>
        							</pluginExecutionFilter>
        							<action>
        								<ignore></ignore>
        							</action>
        						</pluginExecution>
        					</pluginExecutions>
        				</lifecycleMappingMetadata>
        			</configuration>
        		</plugin>
        	</plugins>
        </pluginManagement>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.jboss.spec.javax.transaction</groupId>
            <artifactId>jboss-transaction-api_1.1_spec</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <!-- JCA API -->
            <groupId>org.jboss.ironjacamar</groupId>
            <artifactId>ironjacamar-spec-api</artifactId>
            <version>1.0.0.Beta5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.narayana.xts</groupId>
            <artifactId>jbossxts</artifactId>
            <classifier>api</classifier>
        </dependency>
        <dependency>
            <groupId>org.jboss.narayana.jta</groupId>
            <artifactId>narayana-jta</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-httpclient</groupId>
            <artifactId>commons-httpclient</artifactId>
            <version>3.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>jboss-logging</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>jboss-logging-processor</artifactId>
            <scope>provided</scope>
        </dependency>

       <dependency>
            <groupId>org.jboss.spec</groupId>
            <artifactId>jboss-javaee-6.0</artifactId>
            <version>1.0.0.Final</version>
            <type>pom</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman</artifactId>
            <version>${version.byteman}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman-dtest</artifactId>
            <version>${version.byteman}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${version.apache.httpcomponents}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>${version.apache.httpcomponents}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.11</version>
						<configuration>
							<skip>true</skip>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>arq</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.11</version>
						<configuration>
							<!-- Prevent test and server output appearing in console. -->
							<redirectTestOutputToFile>true</redirectTestOutputToFile>
							<enableAssertions>true</enableAssertions>
							<!-- Tests to execute. -->
							<includes>
								<include>**/*Tests.java</include>
							</includes>
							<!-- System properties passed to test cases -->
							<systemPropertyVariables>
								<!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
								<server.jvm.args>${general.server.jvm.args} ${ipv4.server.jvm.args} ${byteman.server.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
								<java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
								<node.address>localhost</node.address>
							</systemPropertyVariables>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.jboss.as</groupId>
					<artifactId>jboss-as-arquillian-container-managed</artifactId>
					<version>${version.jbossas}</version>
<!-- TODO harmonise versions
					<version>${jboss-as.version}</version>
-->
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>arqIPv6</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.11</version>
						<configuration>
							<CLI_IPV6_OPTS>-Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</CLI_IPV6_OPTS> 
							<!-- Prevent test and server output appearing in console. -->
							<redirectTestOutputToFile>true</redirectTestOutputToFile>
							<enableAssertions>true</enableAssertions>
							<!-- Tests to execute. -->
							<includes>
								<include>**/*Tests.java</include>
							</includes>
							<!-- System properties passed to test cases -->
							<systemPropertyVariables>
								<!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
								<server.jvm.args>${general.server.jvm.args} ${ipv6.server.jvm.args} ${byteman.server.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
								<java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
								<node.address>[::1]</node.address>
							</systemPropertyVariables>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.jboss.as</groupId>
					<artifactId>jboss-as-arquillian-container-managed</artifactId>
					<version>${jboss-as.version}</version>
					<scope>test</scope>

					<!-- exclude logmanager because an incompatible version is pulled in
					  -->
					<exclusions>
						<exclusion>
							<artifactId>org.jboss.logmanager</artifactId>
							<groupId>jboss-logmanager</groupId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>org.jboss.logmanager</groupId>
					<artifactId>jboss-logmanager</artifactId>
					<version>1.3.1.Final</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
</project>
